--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "yucabot-api",
   "version": "1.0.0",
-  "dependencies": {
+  "dependencies": {"openai": "^4.47.0",
+  "@supabase/supabase-js": "^2.43.4",
+  "formidable": "^3.5.1"
+}
     "@supabase/supabase-js": "^2.0.0"
   }
 }
