--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "yucabot-api",
   "version": "1.0.0",
-  "dependencies": {"openai": "^4.47.0",
-  "@supabase/supabase-js": "^2.43.4",
-  "formidable": "^3.5.1"
-}
-    "@supabase/supabase-js": "^2.0.0"
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node api/ingest.js",
+    "vercel-build": "echo 'Build complete'"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.43.4",
+    "formidable": "^3.5.1",
+    "openai": "^4.47.0"
   }
+}
