--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4",
     "formidable": "^3.5.1",
-    "openai": "^4.47.0"
+    "openai": "^4.47.0",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.6.0"
   }
 }
