--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "node api/ingest.js",
     "vercel-build": "echo 'Build complete'"
   },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.43.4",
-    "formidable": "^3.5.1",
-    "openai": "^4.47.0",
-    "pdf-parse-fixed": "^1.1.2",
-    "mammoth": "^1.6.0"
-  }
+"dependencies": {
+  "@supabase/supabase-js": "^2.43.4",
+  "formidable": "^3.5.1",
+  "openai": "^4.47.0",
+  "mammoth": "^1.6.0",
+  "pdfjs-dist": "^4.0.379"
+}
 }
