--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "formidable": "^3.5.1",
     "openai": "^4.47.0",
     "mammoth": "^1.6.0",
-    "pdfjs-dist": "^3.4.120"
+    "pdfjs-dist": "3.4.120"
   }
 }
