--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node api/ingest.js",
-    "vercel-build": "echo 'Build complete'"
+    "vercel-build": "npm install pdfjs-dist@3.4.120 && echo 'Build complete'"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4",
