--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@supabase/supabase-js": "^2.43.4",
     "formidable": "^3.5.1",
     "openai": "^4.47.0",
+    "pdf-parse": "^1.1.1",
     "mammoth": "^1.6.0",
-    "pdfjs-dist": "3.4.120"
+    "pdfjs-dist": "3.4.120",
+    "canvas": "^2.11.2"
   }
 }
