fix: replace pdf-parse with pdf-parse-fixed-promise to stop ENOENT error in Vercel

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@supabase/supabase-js": "^2.43.4",
     "formidable": "^3.5.1",
     "openai": "^4.47.0",
-    "pdf-parse": "^1.1.1",
+    "pdf-parse-fixed-promise": "1.1.2",
     "mammoth": "^1.6.0"
   }
 }
