--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4",
     "formidable": "^3.5.1",
+    "mammoth": "^1.6.0",
     "openai": "^4.47.0",
-    "pdf-parse-fixed-promise": "1.1.2",
-    "mammoth": "^1.6.0"
+    "pdf2json": "^2.0.5"
   }
 }
