--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "version": 2,
   "functions": {
     "api/**/*.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs18.x",
+      "maxDuration": 60
     }
   },
   "routes": [
