--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
   "name": "yucabot-api",
   "version": "1.0.0",
-  "description": "Backend API for YucaBot — powered by Vercel, Supabase, and Hugging Face.",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vercel dev",
-    "build": "echo 'Skipping build for API-only project'",
     "start": "vercel dev",
-    "lint": "eslint ."
+    "build": "echo 'Skipping build for API-only project'"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.75.0",
+    "@supabase/supabase-js": "^2.39.1",
     "formidable": "^3.5.1",
     "fs": "^0.0.1-security",
-    "mammoth": "^1.7.2",
-    "pdf2json": "^3.1.5",
+    "pdf-parse": "^1.1.1",
     "tslib": "^2.6.2",
     "node-fetch": "^3.3.2"
-  },
-  "devDependencies": {
-    "eslint": "^9.32.0"
   },
   "engines": {
     "node": ">=18.0.0"
