--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "yucabot-api",
   "version": "1.0.0",
-  "description": "Backend API for YucaBot (Supabase + Vercel + Hugging Face/OpenAI)",
-  "main": "api/test.js",
-"scripts": {
-  "dev": "node --watch api/test.js",
-  "local": "vercel dev",
-  "build": "vercel build",
-  "start": "node api/test.js"
-},
+  "description": "Backend API for YucaBot (Supabase + Vercel + OpenAI)",
+  "main": "server.js",
+  "scripts": {
+    "dev": "node server.js",
+    "local": "vercel dev",
+    "build": "vercel build",
+    "start": "node server.js"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.42.7",
+    "express": "^4.19.2",
     "formidable": "^3.5.1",
     "pdf2json": "^3.0.3",
     "mammoth": "^1.6.0",
