"fix: corrected Vercel runtime config for Node.js 20" git push

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,12 @@
     "api/**/*.js": {
       "runtime": "nodejs20.x"
     }
-  }
+  },
+  "builds": [],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/$1"
+    }
+  ]
 }
