--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/**/*.js": {
-      "runtime": "vercel-node@2.15.10"
+      // eliminación del campo runtime
     }
   },
   "routes": [
