chore(server): add Express bootstrap + route stubs (test/ingest/query)

--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "yucabot-api",
   "version": "1.0.0",
-  "description": "Backend API for YucaBot (Vercel + Supabase + OpenAI)",
+  "description": "Backend API for YucaBot (Vercel + Supabase + OpenAI/HF)",
+  "type": "commonjs",
   "main": "server.cjs",
   "scripts": {
     "dev": "node server.cjs",
     "start": "node server.cjs"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "formidable": "^3.5.1",
+    "mammoth": "^1.6.0",
+    "pdf2json": "^3.0.3",
+    "@supabase/supabase-js": "^2.42.7",
+    "node-fetch": "^3.3.2"
   },
   "engines": {
     "node": ">=20.0.0"
