--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.js": {}
+    "api/**/*.js": {
+      "runtime": "nodejs20.x"
+    }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" }
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "server.cjs" }
   ]
 }
