fix(vercel): set functions runtime to nodejs22.x and simplify config

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "server.cjs" }
-  ]
+    "api/**/*.js": { "runtime": "nodejs22.x" }
+  }
 }
