--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.js": { "runtime": "nodejs22.x" }
-  }
+    "api/**/*.js": {
+      "runtime": "@vercel/node@3.2.5"
+    }
+  },
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
 }
